Added lottie animations, Created card component, Created photo-collection component

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,70 @@
-<p>about works!</p>
+<div class="container">
+  <h1>About this app</h1>
+
+  <section class="row section-margin">
+    <h2 class="col-12 mb-3 mb-lg-0"> A little about the author of this app</h2>
+
+    <div class="col-lg-4 d-flex justify-content-center align-items-center d-none d-sm-block">
+      <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_QOeRfb.json" background="transparent" speed="1"
+        style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+    </div>
+    <div class="col-lg-8">
+
+      <p class=" mt-lg-5">
+        I am a member of the animazon group, a cultural, non-profit group whose main objective
+        is
+        to disseminate through entertainment the Japanese culture in the State of Pará-Brazil, for more information
+        click
+        here.
+      </p>
+
+      <p>
+        So once / twice a year the group organizes an event with various activities open to the public. Among its
+        attractions
+        there is a game played with the participants of the event called "photo-profile", it uses a program made in
+        flash
+        8.
+      </p>
+
+      <p>
+        This encouraged me to create a project that would replace that program and that could also be used by people in
+        their
+        homes, to play with your family in this time of covid.
+      </p>
+
+      <p>
+        So... How does it work?
+      </p>
+    </div>
+
+
+    <!-- <mat-divider></mat-divider> -->
+  </section>
+
+  <section class="row section-margin">
+    <h2 class="col-12 mb-3 mb-lg-0"> Rules of the game</h2>
+
+    <div class="col-lg-8">
+      <p class=" mt-md-4">Participants stand in line, the first participates by speaking into the microphone, or
+        only speaks if played at home.</p>
+      <p>The participant in turn chooses one of the numbers on the monitor to be revealed and then can guess who the
+        character is, in case of an error, go back to the end of the line.</p>
+      <p>During the first 5 frames chosen, it is not valid to reveal the frames that are adjacent horizontally and
+        vertically in a revealed section.</p>
+      <p>At the discretion of the person coordinating the game, the right of reply may remain open to the other positions
+        in
+        the queue in case of delay.</p>
+      <p>At the discretion of the person coordinating the game, the right of reply may remain open to the other positions
+        in
+        the queue in case of delay.</p>
+    </div>
+
+    <div class="col-lg-4 d-flex justify-content-center align-items-center d-none d-sm-block">
+      <lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_oSaQwF.json" background="transparent"
+        speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+    </div>
+
+
+    <!-- <mat-divider></mat-divider> -->
+  </section>
+</div>
