--- a/src/app/pages/setup-game/components/upload-file/upload-file.component.html
+++ b/src/app/pages/setup-game/components/upload-file/upload-file.component.html
@@ -1,10 +1,8 @@
 <form [formGroup]="uploadForm" (ngSubmit)="submit()">
 
-  <input type="file" accept="image/*" (change)="showPreview($event)" #inputFile />
+  <input class="form-control" mat-raised-button color="primary" type="file" accept="image/*" (change)="showPreview($event)" #inputFile />
 
-
-
-  <div class="imagePreview" *ngIf="imageURL && imageURL !== ''">
+  <div class="imagePreview mt-3" *ngIf="imageURL && imageURL !== ''">
     <div class="card text-center  border-danger  g-0">
       <div class="card-header bg-danger text-white">
         Preview
