--- a/src/app/pages/setup-game/containers/setup-game/setup-game.component.html
+++ b/src/app/pages/setup-game/containers/setup-game/setup-game.component.html
@@ -1,58 +1,27 @@
 <div class="container">
   <h1>SETUP GAME</h1>
 
-  <mat-divider></mat-divider>
   <h2>Fill the form</h2>
   <mat-divider></mat-divider>
 
   <app-photo-perfil-form (formResponse)="formListener($event)"></app-photo-perfil-form>
+
   <br>
 
-  <mat-divider></mat-divider>
   <h2>Photos added</h2>
   <mat-divider></mat-divider>
+
   <br>
-  <div *ngIf="(photoPerfilCollection$ | async)?.photoPerfilList.length==0;else hasCollection">
-    <p style="text-align: center;">Collection empty</p>
-    <!-- show photo alert of empty collection -->
+
+  <div *ngIf="(photoPerfilCollection$ | async)?.photoPerfilList ;else hasNoCollection">
+    <app-photo-collection [datasource]=" (photoPerfilCollection$|async)?.photoPerfilList"></app-photo-collection>
   </div>
 
-  <ng-template #hasCollection>
-    <!-- show photo perfil collection list -->
-    <table mat-table [dataSource]=" (photoPerfilCollection$ | async)?.photoPerfilList" class="mat-elevation-z8">
-
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name Character </th>
-        <td mat-cell *matCellDef="let element"> {{element?.originalFile?.name ?element?.originalFile?.name
-          :element?.customName}}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="anime">
-        <th mat-header-cell *matHeaderCellDef> From anime </th>
-        <td mat-cell *matCellDef="let element"> {{element.fromAnime}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef> IMG </th>
-        <td mat-cell *matCellDef="let element">
-          <img [src]="element.imageURL" style="height: 40px; width: 40px;">
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="operations">
-        <th mat-header-cell *matHeaderCellDef> Operations </th>
-        <td mat-cell *matCellDef="let element">
-          on development
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <ng-template #hasNoCollection>
+    <div class="d-flex flex-column align-items-center">
+      <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_CGPHc4.json" background="transparent" speed="1"
+        style="width: 150px; height: 150px;" hover autoplay></lottie-player>
+        <p class="text-main-color"> Empty collection</p>
+    </div>
   </ng-template>
-
 </div>
