--- a/src/app/pages/setup-game/containers/setup-game/setup-game.component.scss
+++ b/src/app/pages/setup-game/containers/setup-game/setup-game.component.scss
@@ -1,3 +1,21 @@
 table {
   width: 100%;
 }
+
+h1 {
+  text-align: center;
+  font-weight: 500;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  color: #673ab7;
+
+  text-transform: uppercase;
+}
+
+h2 {
+  font-weight: 500;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  color: #916dd1;
+  text-transform: uppercase;
+}
