--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-.full-width{
+.full-width {
   width: 100%;
+}
+
+.text-main-color {
+  color: #916dd1;
+  font-weight: 500;
+}
+
+p {
+  font-size: 16px;
 }
