erased old code

--- a/src/app/pages/setup-game/components/photo-perfil-form/photo-perfil-form.component.html
+++ b/src/app/pages/setup-game/components/photo-perfil-form/photo-perfil-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
   <div class="row">
-    <input matInput formControlName="customName" class="full-width" type="originalFile">
-    <input matInput formControlName="customName" class="full-width" type="imageURL">
+    <input matInput formControlName="customName" class="full-width invisible">
+    <input matInput formControlName="customName" class="full-width invisible">
 
     <div class="col-md-6">
       <div class="row">
