--- a/src/app/pages/setup-game/components/photo-collection/photo-collection.component.html
+++ b/src/app/pages/setup-game/components/photo-collection/photo-collection.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngFor="let item of datasource" class="col-sm-12 col-md-4 col-lg-3">
+  <div *ngFor="let item of datasource?.photoPerfilList" class="col-sm-12 col-md-4 col-lg-3">
     <app-card [photo]="item"></app-card>
   </div>
 </div>
