--- a/src/app/pages/photo-perfil/containers/setup-game/components/card/card.component.html
+++ b/src/app/pages/photo-perfil/containers/setup-game/components/card/card.component.html
@@ -7,7 +7,6 @@
 
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary">EDIT</button>
-    <button mat-raised-button color="warn">DELETE</button>
+    <button mat-raised-button color="warn" class="form-control" (click)="delete(photo.id)">DELETE</button>
   </mat-card-actions>
 </mat-card>
